syntax = "proto3";

service TaskService {
    rpc SubmitTask(TaskRequest) returns (TaskResponse) {}
    rpc GetTaskStatus(TaskStatusRequest) returns (TaskStatusResponse) {}
}

message TaskRequest {
    string taskId = 1;
    string taskPayload = 2;
}

message TaskResponse {
    string taskId = 1;
    string status = 2;
}

message TaskStatusRequest {
    string taskId = 1;
}

message TaskStatusResponse {
    string status = 1;
}
